--- a/src/main/resources/client/hello-view.fxml
+++ b/src/main/resources/client/hello-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="430.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo2.HelloController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="430.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.HelloController">
    <children>
       <DatePicker layoutX="241.0" layoutY="117.0" />
       <Label layoutX="70.0" layoutY="21.0" prefHeight="43.0" prefWidth="291.0" text="dentist appointment" textAlignment="CENTER">
