--- a/src/main/resources/client/hello-view.fxml
+++ b/src/main/resources/client/hello-view.fxml
@@ -6,7 +6,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="479.0" prefWidth="430.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.HelloController">
    <children>
-      <DatePicker layoutX="241.0" layoutY="117.0" />
+      <DatePicker fx:id="dateChanger" layoutX="241.0" layoutY="117.0" />
       <Label layoutX="70.0" layoutY="21.0" prefHeight="43.0" prefWidth="291.0" text="dentist appointment" textAlignment="CENTER">
          <font>
             <Font name="Showcard Gothic" size="26.0" />
@@ -29,5 +29,6 @@
             <Font name="Bodoni MT" size="16.0" />
          </font>
       </Label>
+      <ListView fx:id="listView" layoutX="18.0" layoutY="117.0" prefHeight="303.0" prefWidth="200.0" />
    </children>
 </Pane>
